tests/neg/i7751.scala
val a = Some(a=a,)=> // error // error
val a = Some(x=y,)=> // error
